Correction erreur redirection due a une mauvaise construction de l'url de redirection

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -62,7 +62,7 @@
                     </p>
                 </div>
                 <div class="presentation-picture">
-                    <img src="../img/workinprogress.jpg" alt="photo">
+                    <img src="../img/photo/left-color.png" alt="photo">
                 </div>
             </div>
             <div class="projects-area">
@@ -71,13 +71,13 @@
                     <a href="project/alternance.html" class="project">
                         <div class="alter">
                             <div class="content-project">
-                                <h1>Cooperative training course
+                                <h1>Work-linked training course
                                 </h1>
                             </div>
                         </div>
                         <p>
                             In my studies, 
-                            I'd like to be able to take a cooperative training course with a company
+                            I'd like to be able to take a work-linked training course with a company
                             whose areas of activity are relevant and correspond to my field of study.
                             As part of my training (Bachelor's degree in computer science),
                             I'm taking the DATA course, which focuses on the management
