--- a/public/profil.html
+++ b/public/profil.html
@@ -112,7 +112,7 @@
                             <li>OS : Windows / Linux</li>
                             <li>Git</li>
                             <li>UML</li>
-                            <li>SQL Oracle et MySql</li>
+                            <li>SQL Oracle et MySQL</li>
                         </ul>
                     </div>
                 </div>
