--- a/public/en/profil.html
+++ b/public/en/profil.html
@@ -1,83 +1,83 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mon Profil</title>
-        <link rel="stylesheet" href="css/style-profil.css">
-        <link rel="stylesheet" href="css/style-common.css">
+        <title>My Profile</title>
+        <link rel="stylesheet" href="../css/style-profil.css">
+        <link rel="stylesheet" href="../css/style-common.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" href="img/logo/favicon.png" type="image/x-icon">
+        <link rel="icon" href="../img/logo/favicon.png" type="image/x-icon">
     </head>
     <body>
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="index.html" class="logo">
-                    <img class="logo-large" src="img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="img/hamburger.png">
+                    <img src="../img/hamburger.png">
                 </button>
             </div>
             <div class="nav">
                 <div class="nav-list">
                     <div class="select-language">
-                        <div class="selected-language fr">
-                            Français
+                        <div class="selected-language en">
+                            English
                             <i class="fa fa-chevron-down"></i>
                         </div>
                         <div class="language-list">
-                            <div class="language en">English</div>
+                            <div class="language fr french">Français</div>
                         </div>
                     </div>
-                    <a href="profil.html" class="profil">Profil</a>
-                    <a href="projets.html" class="project-page">Projets</a>
+                    <a href="profil.html" class="profil">Profile</a>
+                    <a href="projets.html" class="project-page">Projects</a>
                     <a href="contact.html" class="contact">Contact</a>
                 </div>
             </div>
             <div class="nav-mobile">
                 <div class="select-language">
-                    <div class="selected-language fr">
-                        Français
+                    <div class="selected-language en">
+                        English
                         <i class="fa fa-chevron-down"></i>
                     </div>
                     <div class="language-list">
-                        <div class="language en">English</div>
+                        <div class="language fr">Français</div>
                     </div>
                 </div>
-                <a href="profil.html" class="profil">Profil</a>
-                <a href="projets.html" class="project-page">Projets</a>
+                <a href="profil.html" class="profil">Profile</a>
+                <a href="projets.html" class="project-page">Projects</a>
                 <a href="contact.html" class="contact">Contact</a>
             </div>
         </header>
         <main class="content">
             <div class="presentation">
                 <div class="presentation-picture">
-                    <img src="img/workinprogress.jpg" alt="photo">
+                    <img src="../img/photo/right-color.png" alt="photo">
                 </div>
                 <div class="presentation-info">
                     <p>
-                        Je m’appelle Raphaël DURAND, 
-                        je suis étudiant en informatique à l'IUT de Reims Champagne-Ardenne. 
-                        J’ai développé ce site internet pour mettre en valeur mes différents projets en cours et futurs, 
-                        ainsi que promouvoir mon profil professionnel.
+                        My name is Raphaël DURAND. 
+                        I am a student in computer science at the University Institute of Technology of Reims Champagne-Ardenne. 
+                        I developed this website to show my current and future projects, 
+                        and to promote my professional profile.
                     </p>
                 </div>
             </div>
             <div class="skills-area">
-                <h1 class="skills-title">Compétences</h1>
+                <h1 class="skills-title">Skills</h1>
                 <div class="skills">
                     <div class="skills-left">
-                        <h1>Compétences professionnelles</h1>
+                        <h1>Professional skills</h1>
                         <ul>
-                            <li>Travailler en équipe</li>
-                            <li>Etre créatif</li>
-                            <li>Trouver des solutions</li>
+                            <li>Teamwork</li>
+                            <li>Creativity</li>
+                            <li>Finding solutions</li>
                         </ul>
                     </div>
                     <div class="skills-middle">
-                        <h1>Langages de programmations</h1>
+                        <h1>Programing languages</h1>
                         <ul>
                             <li>Python</li>
                             <li>PHP</li>
@@ -85,18 +85,18 @@
                         </ul>
                     </div>
                     <div class="skills-right">
-                        <h1>Langues parlées</h1>
+                        <h1>Spoken languages</h1>
                         <ul>
-                            <li>Français (natif)</li>
-                            <li>Anglais (B2 non certifié)</li>
-                            <li>Allemand (A2 non certifié)</li>
+                            <li>French (native)</li>
+                            <li>English (B2-intermediate+ uncertified)</li>
+                            <li>German (A2-elementary uncertified)</li>
                         </ul>
                     </div>
                     <div class="skills-left">
                         <h1>IDE</h1>
                         <ul>
                             <li>Visual Studio Code</li>
-                            <li>JetBrains (Pycharm et PhpStorm)</li>
+                            <li>JetBrains (Pycharm and PhpStorm)</li>
                         </ul>
                     </div>
                     <div class="skills-middle">
@@ -106,13 +106,13 @@
                         </ul>
                     </div>
                     <div class="skills-right">
-                        <h1>Autres</h1>
+                        <h1>Others</h1>
                         <ul>
-                            <li>Manager de dépendances : Composer (PHP)</li>
+                            <li>Dependency manager : Composer (PHP)</li>
                             <li>OS : Windows / Linux</li>
                             <li>Git</li>
                             <li>UML</li>
-                            <li>SQL Oracle et MySql</li>
+                            <li>Oracle SQL and MySQL</li>
                         </ul>
                     </div>
                 </div>
@@ -124,31 +124,33 @@
                         <div class="experience-picture lycee"></div>
                     </div>
                     <p class="experience-info">
-                        Je suis allé étudier au lycée Pierre Méchain à Laon pendant 3 ans en internat dans la filière générale.
-                        J'ai beaucoup gagné en autonomie et en organisation pendant cette période très enrichissante.<br>
+                        I went to study at the Lycée Pierre Méchain in Laon (France) for 3 years as a boarder in the general pathway. 
+                        I gained a lot of independence and organization during this very rewarding period.<br>
                         <br>
-                        J'ai suivi les spécialités Mathématiques, Physique-Chimie et NSI (Numériques et Sciences Informatiques) avec
-                        de très bons professeurs qui m'ont beaucoup appris.<br>
+                        I took the Maths, Physics-Chemistry and Computer Science
+                        specializations with very good teachers who taught me a lot.<br>
                         <br>
-                        Pendant mon année de Terminale, j'ai gardé les spécialités Mathématiques et NSI.
-                        En fin d'année, J'ai réussi à décrocher mon baccalauréat avec mention très bien avec d'excellentes notes en spécialités.<br>
+                        During my final year, I kept the Mathematics and Computer Science specialties. 
+                        At the end of the year, I managed to pass my baccalauréat (high school diploma) with honors and 
+                        excellent marks in my specialties.<br>
                         <br>
-                        Cette période a également été marquée par beaucoup de rencontres, puisque j'ai fait un échange scolaire en Bavière pendant ma seconde
-                        et j'ai travaillé en tant que bénévole dans une épicerie sociale en Terminale.
+                        This period was also marked by many encounters, as I went on a school exchange to Bavaria 
+                        during my "seconde" (11th year) and worked as a volunteer in a social grocery store during my "Terminale" 
+                        (final high school year).
                     </p>
                 </div>
                 <div class="experience-right">
                     <p class="experience-info">
-                        Je suis actuellement étudiant à l'IUT de Reims Champagne-Ardenne.<br>
+                        I'm currently a student at the Reims Champagne-Ardenne IUT.<br>
                         <br>
-                        Au cours de cette première année en IUT, j'ai déjà beaucoup appris auprès de mes professeurs.
-                        Aujourd'hui, je suis en 2e année de BUT (Bachelor Universitaire et Technologique) informatique parcours DATA.<br>
+                        During my first year at IUT, I've already learned a lot from my teachers. 
+                        Today, I'm in my 2nd year of the BUT (my computer science course), with the DATA specialization.<br>
                         <br>
-                        Mon objectif principal, cette année, est la recherche d'un stage (2 mois avril-juin) qui me correspond pour me permettre de me professionnaliser en informatique.
-                        J'aspire également à devenir alternant lors de ma troisième année, c'est pourquoi je recherche également une entreprise prête à m'embaucher
-                        pour mon alternance. <br>
+                        My main objective this year is to find an internship (2 months April-June) that suits me and enables me to become more professional in IT. 
+                        I'm also aiming to become a work-study student in my third year, which is why I'm also looking for a company willing to take me 
+                        on for my work-study placement.<br>
                         <br>
-                        Après mon BUT, j'envisage de poursuivre mes études en école d'ingénieur ou master.
+                        After my "BUT", I plan to continue my studies at an engineering school or master's degree.
                     </p>
                     <div class="experience-picture-area">
                         <div class="experience-picture iut"></div>
@@ -157,13 +159,13 @@
             </div>
             <div class="downloadable">
                 <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
-                <img src="img/cv-site.png" alt="Aperçu de mon cv" class="downloadable-picture">
-                <a href="downloadable/cv-site.pdf" class="download" download="cv-rdurand" target="_blank">Télécharger mon CV</a>
+                <img src="img/cv-site.png" alt="Quick look-up on my cv" class="downloadable-picture">
+                <a href="downloadable/cv-site.pdf" class="download" download="cv-rdurand" target="_blank">Download my CV</a>
             </div>
         </main>
         <footer class="footer">
             <div class="links">
-                <a href="informations.html">A propos</a>
+                <a href="informations.html">About</a>
                 <a href="https://www.linkedin.com/in/rapha%C3%ABl-durand-386720267/" target="_blank">LinkedIn</a>
             </div>
             <div class="adress-area">
@@ -171,21 +173,21 @@
             </div>
             <div class="help-area">
                 <a href="help.html" class="help">
-                    <img src="img/bouee.png" alt="help">
+                    <img src="../img/bouee.png" alt="help">
                 </a>
             </div>
         </footer>
         <div class="cookie-consent">
             <p class="cookie-consent-info">
-                Ce site utilise des cookies internes pour conserver vos préférences (choix de langue). <br>
-                Nous n'utilisons pas de cookies tiers et les cookies ne sont pas utilisés à des fins commerciales.
+                This site uses internal cookies to store your preferences (language selection). <br>
+                We do not use third-party cookies, and cookies are not used for commercial purposes.
             </p>
             <div class="cookie-consent-check">
-                <button class="cookie-consent-refuse">Je refuse</button>
-                <button class="cookie-consent-accept">J'accepte</button>
+                <button class="cookie-consent-refuse">I refuse</button>
+                <button class="cookie-consent-accept">I accept</button>
             </div>
         </div>
-        <script src="js/nav.js"></script>
-        <script src="js/cookie.js"></script>
+        <script src="../js/nav.js"></script>
+        <script src="../js/cookie.js"></script>
     </body>
 </html>
