--- a/public/en/project/alternance.html
+++ b/public/en/project/alternance.html
@@ -1,101 +1,101 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projet : Alternance</title>
-        <link rel="stylesheet" href="css/style-alternance.css">
-        <link rel="stylesheet" href="../css/style-common.css">
+        <title>Project : Work-linked training course</title>
+        <link rel="stylesheet" href="../../project/css/style-alternance.css">
+        <link rel="stylesheet" href="../../css/style-common.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" href="../img/logo/favicon.png" type="image/x-icon">
+        <link rel="icon" href="../../img/logo/favicon.png" type="image/x-icon">
     </head>
     <body>
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="../index.html" class="logo">
-                    <img class="logo-large" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" src="../../img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" src="../../img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="../img/hamburger.png">
+                    <img src="../../img/hamburger.png">
                 </button>
             </div>
             <div class="nav">
                 <div class="nav-list">
                     <div class="select-language">
-                        <div class="selected-language fr">
-                            Français
+                        <div class="selected-language en">
+                            English
                             <i class="fa fa-chevron-down"></i>
                         </div>
                         <div class="language-list">
-                            <div class="language en">English</div>
+                            <div class="language fr french">Français</div>
                         </div>
                     </div>
-                    <a href="../profil.html" class="profil">Profil</a>
-                    <a href="../projets.html" class="project-page">Projets</a>
+                    <a href="../profil.html" class="profil">Profile</a>
+                    <a href="../projets.html" class="project-page">Projects</a>
                     <a href="../contact.html" class="contact">Contact</a>
                 </div>
             </div>
             <div class="nav-mobile">
                 <div class="select-language">
-                    <div class="selected-language fr">
-                        Français
+                    <div class="selected-language en">
+                        English
                         <i class="fa fa-chevron-down"></i>
                     </div>
                     <div class="language-list">
-                        <div class="language en">English</div>
+                        <div class="language fr">Français</div>
                     </div>
                 </div>
-                <a href="../profil.html" class="profil">Profil</a>
-                <a href="../projets.html" class="project-page">Projets</a>
+                <a href="../profil.html" class="profil">Profile</a>
+                <a href="../projets.html" class="project-page">Projects</a>
                 <a href="../contact.html" class="contact">Contact</a>
             </div>
         </header>
         <main class="content">
             <div class="presentation">
-                <h1 class="presentation-title">Alternance</h1>
-                <p class="presentation-subtitle">Mon projet pour 2024</p>
+                <h1 class="presentation-title">Work-linked training course</h1>
+                <p class="presentation-subtitle">My project for 2024</p>
             </div>
             <div class="description">
                 <div class="description-left">
                     <div class="description-picture-area">
-                        <img src="../img/lycee.jpg" class="description-picture">
+                        <img src="../../img/lycee.jpg" class="description-picture">
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
-                        Actuellement en deuxième année de BUT informatique dans l'IUT de Reims, je suis à la recherche d'une entreprise prête à
-                        m'embaucher en tant qu'alternant à partir de la rentrée 2024.<br>
+                        I'm currently in my second year of a computer science degree at the IUT in Reims, 
+                        and I'm looking for a company willing to take me on as a work-study student starting in September 2024.<br>
                         <br>
-                        Ce projet d'alternance est très important pour moi, car j'aspire à me professionnaliser tout en continuant mes études.
-                        L'alternance est pour moi une chance d'apprendre auprès d'employés compétents en situation réelle.<br>
+                        This work-study project is very important to me, as I'm aiming to become a professional while continuing my studies. 
+                        For me, work-study is a chance to learn from competent employees in a real-life situation.<br>
                         <br>
-                        Étudiant sérieux et curieux, je sais faire preuve de beaucoup d'implication dans mon travail.
-                        Si vous voulez en apprendre plus sur mon profil :<br>
-                        <a href="../profil.html" class="more-profil">Regarder mon profil</a>
+                        I'm a serious and curious student, and I'm very committed to my work. If you'd like to find out more about my profile :<br>
+                        <a href="../profil.html" class="more-profil">Read my profile</a>
                     </p>
                 </div>
                 <div class="description-right">
                     <p class="description-info">
-                        Curieux et créatif, j'ai découvert l'informatique au collège avec les bases de l'algorithmique sur mBlock.<br>
-                        Au lycée, j'ai découvert le langage de programmation Python que j'utilise encore beaucoup aujourd'hui.<br>
-                        Aujourd'hui, je continue mon BUT informatique en parcours DATA.<br>
+                        Curious and creative, I discovered computing in secondary school with the basics of algorithms on mBlock.<br>
+                        In high school, I discovered the Python programming language, which I still use a lot today.<br>
+                        Today, I'm continuing my computer science degree in DATA specialization.<br>
                         <br>
-                        Au cours de cette deuxième année, je vais effectuer un stage d'environ 2 mois en milieu professionnel.
-                        Je sais déjà que ce stage sera très enrichissant et qu'il ne sera qu'un avant-goût de ce qu'est l'apprentissage en alternance.<br>
+                        During my second year, I'll be doing a 2-month internship in a professional environment. 
+                        I already know that this internship will be very rewarding, 
+                        and that it will just be a foretaste of what it's like to do a work-study apprenticeship.<br>
                         <br>
-                        Employeurs et recruteurs, si vous êtes intéressés par mon profil, vous pouvez me contacter avec le lien suivant :<br>
-                        <a href="../contact.html" class="more-contact">Me contacter</a>
+                        Employers and recruiters, if you're interested in my profile, you can contact me by clicking on the following link:<br>
+                        <a href="../contact.html" class="more-contact">Contact me</a>
                     </p>
                     <div class="description-filler"></div>
                     <div class="description-picture-area">
-                        <img src="../img/iut.jpg" class="description-picture">
+                        <img src="../../img/iut.jpg" class="description-picture">
                     </div>
                 </div>
             </div>
         </main>
         <footer class="footer">
             <div class="links">
-                <a href="../informations.html">A propos</a>
+                <a href="../informations.html">About</a>
                 <a href="https://www.linkedin.com/in/rapha%C3%ABl-durand-386720267/" target="_blank">LinkedIn</a>
             </div>
             <div class="adress-area">
@@ -103,7 +103,7 @@
             </div>
             <div class="help-area">
                 <a href="../help.html" class="help">
-                    <img src="../img/bouee.png" alt="help">
+                    <img src="../../img/bouee.png" alt="help">
                 </a>
             </div>
         </footer>
@@ -117,7 +117,7 @@
                 <button class="cookie-consent-accept">J'accepte</button>
             </div>
         </div>
-        <script src="../js/nav.js"></script>
-        <script src="../js/cookie.js"></script>
+        <script src="../../js/nav.js"></script>
+        <script src="../../js/cookie.js"></script>
     </body>
 </html>
