Fin traduction + ajout balises meta

--- a/public/en/contact_error/error_not_send.html
+++ b/public/en/contact_error/error_not_send.html
@@ -1,68 +1,81 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Erreur : non envoyé</title>
-        <link rel="stylesheet" href="style_contact_error.css">
-        <link rel="stylesheet" href="../css/style-common.css">
+        <meta http-equiv="Content-Language" content="en">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta property="og:title" content="Raphael DURAND's website">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.raphael-durand.fr/">
+        <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        informations about my professionnal profile.">
+        <meta name="theme-color" content="#080957">
+        <meta name="author" content="Raphaël DURAND">
+        <meta name="description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
+        informations about my professionnal profile.">
+        <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
+        <title>Error : not send</title>
+        <link rel="stylesheet" href="../../contact_error/style_contact_error.css">
+        <link rel="stylesheet" href="../../css/style-common.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" href="../img/logo/favicon.png" type="image/x-icon">
+        <link rel="icon" href="../../img/logo/favicon.png" type="image/x-icon">
     </head>
     <body>
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="../index.html" class="logo">
-                    <img class="logo-large" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" src="../../img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" src="../../img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="../img/hamburger.png">
+                    <img src="../../img/hamburger.png">
                 </button>
             </div>
             <div class="nav">
                 <div class="nav-list">
                     <div class="select-language">
-                        <div class="selected-language fr">
-                            Français
+                        <div class="selected-language en">
+                            English
                             <i class="fa fa-chevron-down"></i>
                         </div>
                         <div class="language-list">
-                            <div class="language en">English</div>
+                            <div class="language fr french">Français</div>
                         </div>
                     </div>
-                    <a href="../profil.html" class="profil">Profil</a>
-                    <a href="../projets.html" class="project-page">Projets</a>
+                    <a href="../profil.html" class="profil">Profile</a>
+                    <a href="../projets.html" class="project-page">Projects</a>
                     <a href="../contact.html" class="contact">Contact</a>
                 </div>
             </div>
             <div class="nav-mobile">
                 <div class="select-language">
-                    <div class="selected-language fr">
-                        Français
+                    <div class="selected-language en">
+                        English
                         <i class="fa fa-chevron-down"></i>
                     </div>
                     <div class="language-list">
-                        <div class="language en">English</div>
+                        <div class="language fr">Français</div>
                     </div>
                 </div>
-                <a href="../profil.html" class="profil">Profil</a>
-                <a href="../projets.html" class="project-page">Projets</a>
+                <a href="../profil.html" class="profil">Profile</a>
+                <a href="../projets.html" class="project-page">Projects</a>
                 <a href="../contact.html" class="contact">Contact</a>
             </div>
         </header>
         <main class="content">
-            <h1 class="title">Oups... il semblerai qu'il y ait eu une erreur lors de l'envoi du formulaire</h1>
-            <p class="text">Vous pouvez réessayez ici :</p>
-            <a href="../contact.html" class="contact-redirect">Réessayer</a>
+            <h1 class="title">Oops... it seems that an error has occurred when sending the form</h1>
+            <p class="text">You can try again here :</p>
+            <a href="../contact.html" class="contact-redirect">Try again</a>
             <p class="text">
-                Si le problème persiste, vous pouvez envoyer un message <br> à contact@raphael-durand.fr
+                If the problem persists, you can send a message <br> to contact@raphael-durand.fr
             </p>
             <div class="fill"></div>
         </main>
         <footer class="footer">
             <div class="links">
-                <a href="../informations.html">A propos</a>
+                <a href="../informations.html">About</a>
                 <a href="https://www.linkedin.com/in/rapha%C3%ABl-durand-386720267/" target="_blank">LinkedIn</a>
             </div>
             <div class="adress-area">
@@ -70,21 +83,21 @@
             </div>
             <div class="help-area">
                 <a href="../help.html" class="help">
-                    <img src="../img/bouee.png" alt="help">
+                    <img src="../../img/bouee.png" alt="help">
                 </a>
             </div>
         </footer>
         <div class="cookie-consent">
             <p class="cookie-consent-info">
-                Ce site utilise des cookies internes pour conserver vos préférences (choix de langue). <br>
-                Nous n'utilisons pas de cookies tiers et les cookies ne sont pas utilisés à des fins commerciales.
+                This site uses internal cookies to store your preferences (language selection). <br>
+                We do not use third-party cookies, and cookies are not used for commercial purposes.
             </p>
             <div class="cookie-consent-check">
-                <button class="cookie-consent-refuse">Je refuse</button>
-                <button class="cookie-consent-accept">J'accepte</button>
+                <button class="cookie-consent-refuse">I refuse</button>
+                <button class="cookie-consent-accept">I accept</button>
             </div>
         </div>
-        <script src="../js/nav.js"></script>
-        <script src="../js/cookie.js"></script>
+        <script src="../../js/nav.js"></script>
+        <script src="../../js/cookie.js"></script>
     </body>
 </html>
