--- a/public/en/project/website.html
+++ b/public/en/project/website.html
@@ -1,112 +1,128 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projet : Site Internet</title>
-        <link rel="stylesheet" href="css/style-website.css">
-        <link rel="stylesheet" href="../css/style-common.css">
+        <meta http-equiv="Content-Language" content="en">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta property="og:title" content="Raphael DURAND's website">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.raphael-durand.fr/">
+        <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        informations about my professionnal profile.">
+        <meta name="theme-color" content="#080957">
+        <meta name="author" content="Raphaël DURAND">
+        <meta name="description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
+        informations about my professionnal profile.">
+        <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
+        <title>Project : Website</title>
+        <link rel="stylesheet" href="../../project/css/style-website.css">
+        <link rel="stylesheet" href="../../css/style-common.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" href="../img/logo/favicon.png" type="image/x-icon">
+        <link rel="icon" href="../../img/logo/favicon.png" type="image/x-icon">
     </head>
     <body>
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="../index.html" class="logo">
-                    <img class="logo-large" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" src="../../img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" src="../../img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="../img/hamburger.png">
+                    <img src="../../img/hamburger.png">
                 </button>
             </div>
             <div class="nav">
                 <div class="nav-list">
                     <div class="select-language">
-                        <div class="selected-language fr">
-                            Français
+                        <div class="selected-language en">
+                            English
                             <i class="fa fa-chevron-down"></i>
                         </div>
                         <div class="language-list">
-                            <div class="language en">English</div>
+                            <div class="language fr french">Français</div>
                         </div>
                     </div>
-                    <a href="../profil.html" class="profil">Profil</a>
-                    <a href="../projets.html" class="project-page">Projets</a>
+                    <a href="../profil.html" class="profil">Profile</a>
+                    <a href="../projets.html" class="project-page">Projects</a>
                     <a href="../contact.html" class="contact">Contact</a>
                 </div>
             </div>
             <div class="nav-mobile">
                 <div class="select-language">
-                    <div class="selected-language fr">
-                        Français
+                    <div class="selected-language en">
+                        English
                         <i class="fa fa-chevron-down"></i>
                     </div>
                     <div class="language-list">
-                        <div class="language en">English</div>
+                        <div class="language fr">Français</div>
                     </div>
                 </div>
-                <a href="../profil.html" class="profil">Profil</a>
-                <a href="../projets.html" class="project-page">Projets</a>
+                <a href="../profil.html" class="profil">Profile</a>
+                <a href="../projets.html" class="project-page">Projects</a>
                 <a href="../contact.html" class="contact">Contact</a>
             </div>
         </header>
         <main class="content">
             <div class="presentation">
                 <h1 class="presentation-title">raphael-durand.fr</h1>
-                <p class="presentation-subtitle">Mon site internet portfolio</p>
+                <p class="presentation-subtitle">My portfolio website</p>
             </div>
             <div class="description">
                 <div class="description-left">
                     <div class="description-picture-area">
-                        <img src="../img/apercu-projets.png" class="description-picture">
+                        <img src="../../img/apercu-projets.png" class="description-picture">
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
-                        Cet été 2023, j'ai décidé de mettre mes connaissances en programmation web à l'épreuve en réalisant ce site internet.<br>
+                        This summer of 2023, I decided to put my web programming skills to the test by creating this website.<br>
                         <br>
-                        J'ai pris l'initiative de créer cet outil dans le but de me mettre avant, grâce à mes réalisations informatiques.
-                        Ce site est également le moyen le plus efficace que j'ai trouvé pour vous transmettre mon profil professionnel avec des documents
-                        comme mon CV.<br>
+                        I took the initiative of creating this tool with the aim of putting myself forward, 
+                        thanks to my computer achievements. This site is also the most effective way I've found to share 
+                        my professional profile with you, with documents such as my CV.<br>
                         <br>
-                        Dans le cadre de mon BUT informatique, ce projet est également un bon moyen de réutiliser les connaissances que j'ai acquises lors de cette première année.
+                        In the context of my IT training course, this project is also a good way of reusing the knowledge 
+                        I acquired during my first year.
                     </p>
                 </div>
                 <div class="description-right">
                     <p class="description-info">
-                        Une autre raison qui m'a donné envie de réaliser ce projet vient de mon portfolio universitaire.<br>
+                        Another reason why I wanted to do this project was my university portfolio.<br>
                         <br>
-                        En effet, nous devons réaliser dans le cadre du BUT un portfolio sur une plateforme universitaire (ici Mahara).
-                        Le problème étant que le portfolio est supprimé des serveurs de l'université une fois notre formation terminée 
-                        (sans possibilité d'exportation...).<br>
+                        As part of the BUT program, we have to create a portfolio on a university platform (in this case, Mahara). 
+                        The problem is that the portfolio is deleted from the university's servers once we've completed our training 
+                        (with no possibility of exporting it...).<br>
                         <br>
-                        J'ai donc pris la démarche de créer une plateforme plus durable qui pourra me suivre au cours de ma carrière.
+                        So I took the step of creating a more durable platform that could follow me throughout my career.
                     </p>
                     <div class="description-filler"></div>
                     <div class="description-picture-area">
-                        <img src="../img/mahara.png" class="description-picture">
+                        <img src="../../img/mahara.png" class="description-picture">
                     </div>
                 </div>
                 <div class="description-left">
                     <div class="description-picture-area">
-                        <img src="../img/croquis.jpg" class="description-picture">
+                        <img src="../../img/croquis.jpg" class="description-picture">
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
-                        Pour réaliser ce projet, j'ai donc réfléchi pour vous proposer la meilleure expérience possible avec une interface agréable à utiliser.<br>
+                        To realize this project, I thought about offering you the best possible experience with a user-friendly interface.<br>
                         <br>
-                        Pour atteindre ce but, j'ai réalisé de nombreux croquis pour convenir à un design qui me correspond. Ce projet m'a permis de mettre en avant
-                        ma créativité ainsi que mon imagination. J'ai également pris conscience des progrès qu'il me reste à faire en termes de développement.<br>
+                        To achieve this goal, I made numerous sketches to come up with a design that suited me. 
+                        This project allowed me to showcase my creativity and imagination. 
+                        It also made me aware of the progress I still have to make in terms of web development.<br>
                         <br>
-                        Bien sûr, ce projet est loin d'être achevé : en plus des diverses améliorations du site, il me reste encore de nombreux travaux à vous partager.
-                        Actuellement, ce site est en majorité écrit en HTML et CSS directement avec quelques programmes en PHP. J'aimerais notamment utiliser plus de JavaScript.
+                        Of course, this project is far from complete: in addition to the various improvements to the site, 
+                        I still have a lot of achievement to share with you. At present, this site is mostly written in HTML and CSS directly, 
+                        with a few PHP programs. In particular, I'd like to make more use of JavaScript.
                     </p>
                 </div>
             </div>
         </main>
         <footer class="footer">
             <div class="links">
-                <a href="../informations.html">A propos</a>
+                <a href="../informations.html">About</a>
                 <a href="https://www.linkedin.com/in/rapha%C3%ABl-durand-386720267/" target="_blank">LinkedIn</a>
             </div>
             <div class="adress-area">
@@ -114,21 +130,21 @@
             </div>
             <div class="help-area">
                 <a href="../help.html" class="help">
-                    <img src="../img/bouee.png" alt="help">
+                    <img src="../../img/bouee.png" alt="help">
                 </a>
             </div>
         </footer>
         <div class="cookie-consent">
             <p class="cookie-consent-info">
-                Ce site utilise des cookies internes pour conserver vos préférences (choix de langue). <br>
-                Nous n'utilisons pas de cookies tiers et les cookies ne sont pas utilisés à des fins commerciales.
+                This site uses internal cookies to store your preferences (language selection). <br>
+                We do not use third-party cookies, and cookies are not used for commercial purposes.
             </p>
             <div class="cookie-consent-check">
-                <button class="cookie-consent-refuse">Je refuse</button>
-                <button class="cookie-consent-accept">J'accepte</button>
+                <button class="cookie-consent-refuse">I refuse</button>
+                <button class="cookie-consent-accept">I accept</button>
             </div>
         </div>
-        <script src="../js/nav.js"></script>
-        <script src="../js/cookie.js"></script>
+        <script src="../../js/nav.js"></script>
+        <script src="../../js/cookie.js"></script>
     </body>
 </html>
