--- a/public/en/project/alternance.html
+++ b/public/en/project/alternance.html
@@ -3,6 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Language" content="en">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta property="og:title" content="Raphael DURAND's website">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.raphael-durand.fr/">
+        <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        informations about my professionnal profile.">
+        <meta name="theme-color" content="#080957">
+        <meta name="author" content="Raphaël DURAND">
+        <meta name="description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
+        informations about my professionnal profile.">
+        <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
         <title>Project : Work-linked training course</title>
         <link rel="stylesheet" href="../../project/css/style-alternance.css">
         <link rel="stylesheet" href="../../css/style-common.css">
@@ -109,12 +122,12 @@
         </footer>
         <div class="cookie-consent">
             <p class="cookie-consent-info">
-                Ce site utilise des cookies internes pour conserver vos préférences (choix de langue). <br>
-                Nous n'utilisons pas de cookies tiers et les cookies ne sont pas utilisés à des fins commerciales.
+                This site uses internal cookies to store your preferences (language selection). <br>
+                We do not use third-party cookies, and cookies are not used for commercial purposes.
             </p>
             <div class="cookie-consent-check">
-                <button class="cookie-consent-refuse">Je refuse</button>
-                <button class="cookie-consent-accept">J'accepte</button>
+                <button class="cookie-consent-refuse">I refuse</button>
+                <button class="cookie-consent-accept">I accept</button>
             </div>
         </div>
         <script src="../../js/nav.js"></script>
