--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Language" content="fr">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta property="og:title" content="Raphael DURAND's website">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.raphael-durand.fr/">
+        <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        informations about my professionnal profile.">
+        <meta name="theme-color" content="#080957">
+        <meta name="author" content="Raphaël DURAND">
+        <meta name="description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
+        informations about my professionnal profile.">
+        <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
         <title>Bienvenue</title>
         <link rel="stylesheet" href="css/style-index.css">
         <link rel="stylesheet" href="css/style-common.css">
