Corrections diverses sur la version anglaise

--- a/public/en/contact.html
+++ b/public/en/contact.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
@@ -73,12 +73,12 @@
             <textarea name="message" placeholder="Message" class="form-message" form="contact" required></textarea>
             <label for="cgu" class="form-cgu-label">
                 <input type="checkbox" name="cgu" id="cgu" class="form-cgu" required>
-                I read and I accept the <a href="informations.html">terms and conditions of use</a>
+                I have read and I accept the <a href="informations.html">terms and conditions of use</a>
             </label>
             <button type="submit" class="form-submit">Send</button>
         </form>
         <p class="warning">Please do not leave spams/advertisements, professional contact only.
-            Inappropriate messages will not be processed. By filling this form, you consent to communicate
+            Inappropriate messages will be ignored. By filling this form, you consent to communicate
             the requested informations. These are not collected for advertising purposes.</p>
         <div class="fill"></div>
         </main>
