--- a/public/en/project/website.html
+++ b/public/en/project/website.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
@@ -76,13 +76,13 @@
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
-                        This summer of 2023, I decided to put my web programming skills to the test by creating this website.<br>
+                        This summer 2023, I decided to put my web programming skills to the test by creating this website.<br>
                         <br>
-                        I took the initiative of creating this tool with the aim of putting myself forward, 
+                        I took the initiative of creating this tool with the goal of putting myself forward, 
                         thanks to my computer achievements. This site is also the most effective way I've found to share 
                         my professional profile with you, with documents such as my CV.<br>
                         <br>
-                        In the context of my IT training course, this project is also a good way of reusing the knowledge 
+                        In the context of my computer science training course, this project is also a good way of reusing the knowledge 
                         I acquired during my first year.
                     </p>
                 </div>
