--- a/public/en/help.html
+++ b/public/en/help.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
@@ -73,7 +73,7 @@
                 </button>
                 <div class="answer">
                     <p class="answer-content">
-                        Every informations about my professional profile are in the <a href="profil.html" class="more-profil">Profil</a> page. <br>
+                        Every informations about my professional profile are in the <a href="profil.html" class="more-profil">Profile</a> page. <br>
                         You will find, among others, my CV and my cursus.
                     </p>
                 </div>
@@ -83,7 +83,7 @@
                 </button>
                 <div class="answer">
                     <p class="answer-content">
-                        My curriculum vitae is available in the <a href="profil.html" class="more-profil">Profil</a> page.
+                        My curriculum vitae is available in the <a href="profil.html" class="more-profil">Profile</a> page.
                     </p>
                 </div>
                 <button class="question">
