--- a/public/en/index.html
+++ b/public/en/index.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
@@ -69,7 +69,7 @@
                 <div class="presentation-info">
                     <p>
                         My name is Raphaël DURAND. 
-                        I am a student in computer science at the University Institute of Technology of Reims Champagne-Ardenne. 
+                        I am a student in computer science at the University Institute of Technology (IUT) of Reims Champagne-Ardenne. 
                         I developed this website to show my current and future projects, 
                         and to promote my professional profile.
                     </p>
