--- a/public/en/informations.html
+++ b/public/en/informations.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
@@ -91,7 +91,7 @@
                     The present Terms and Conditions of use provide a legal framework 
                     for the use of the raphael-durand.fr website (hereinafter referred to as "the Website").<br>
                     <br>
-                    By using the Website, the User  acknowledges and confirms having read, understood and accepted in their entirety, 
+                    By using the Website, the User acknowledges and confirms having read, understood and accepted in their entirety, 
                     and without reservation, all of the present terms, obligations and conditions of use, hereinafter the "Terms of use".<br>
                     <br>
                     Me, Raphaël DURAND reserves the right to modify the General Conditions, which will take effect as soon as they are published on the Site. 
@@ -147,9 +147,9 @@
                 <h3>Liability clause</h3>
                 <p>
                     Under no circumstances may Me Raphaël DURAND and the Website be associated with or held liable 
-                    for any damage or trouble caused by the User's misinterpretation or use of the information presented on the Website.<br>
+                    for any damage or trouble caused by the User's misinterpretation or use of the informations presented on the Website.<br>
                     <br>
-                    It is the User's responsibility to make appropriate use of the information presented on the Website.
+                    It is the User's responsibility to make appropriate use of the informations presented on the Website.
                 </p>
                 <h2>Article 8</h2>
                 <h3>Cookies</h3>
