--- a/public/en/profil.html
+++ b/public/en/profil.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
@@ -72,7 +72,7 @@
                 <div class="presentation-info">
                     <p>
                         My name is Raphaël DURAND. 
-                        I am a student in computer science at the University Institute of Technology of Reims Champagne-Ardenne. 
+                        I am a student in computer science at the University Institute of Technology (IUT) of Reims Champagne-Ardenne. 
                         I developed this website to show my current and future projects, 
                         and to promote my professional profile.
                     </p>
@@ -156,8 +156,8 @@
                     <p class="experience-info">
                         I'm currently a student at the Reims Champagne-Ardenne IUT.<br>
                         <br>
-                        During my first year at IUT, I've already learned a lot from my teachers. 
-                        Today, I'm in my 2nd year of the BUT (my computer science course), with the DATA specialization.<br>
+                        During my first year at the IUT, I've already learned a lot from my teachers. 
+                        Today, I'm in my 2nd year of the BUT (my computer science Bachelor's degree), with the DATA specialization.<br>
                         <br>
                         My main objective this year is to find an internship (2 months April-June) that suits me and enables me to become more professional in IT. 
                         I'm also aiming to become a work-study student in my third year, which is why I'm also looking for a company willing to take me 
