--- a/public/en/project/alternance.html
+++ b/public/en/project/alternance.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
@@ -76,10 +76,10 @@
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
-                        I'm currently in my second year of a computer science degree at the IUT in Reims, 
+                        I'm currently in my second year of a computer science Bachelor's degree at the IUT in Reims, 
                         and I'm looking for a company willing to take me on as a work-study student starting in September 2024.<br>
                         <br>
-                        This work-study project is very important to me, as I'm aiming to become a professional while continuing my studies. 
+                        This work-study project is very important to me, as I'm aiming to become more professional while continuing my studies. 
                         For me, work-study is a chance to learn from competent employees in a real-life situation.<br>
                         <br>
                         I'm a serious and curious student, and I'm very committed to my work. If you'd like to find out more about my profile :<br>
@@ -90,7 +90,7 @@
                     <p class="description-info">
                         Curious and creative, I discovered computing in secondary school with the basics of algorithms on mBlock.<br>
                         In high school, I discovered the Python programming language, which I still use a lot today.<br>
-                        Today, I'm continuing my computer science degree in DATA specialization.<br>
+                        Today, I'm continuing my computer science Bachelor's degree in DATA specialization.<br>
                         <br>
                         During my second year, I'll be doing a 2-month internship in a professional environment. 
                         I already know that this internship will be very rewarding, 
