--- a/public/en/project/sound.html
+++ b/public/en/project/sound.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievement and every necessary
+        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
@@ -81,8 +81,8 @@
                         For the moment, I haven't really started work on this project, which is more in a state of genesis. 
                         So, for the moment, I don't have much to offer you.<br>
                         <br>
-                        The aim of this software would be to transcribe analog sounds corresponding to words into written form. 
-                        The aim of this project is to create my own voice chatbot, codenamed Zilliax.
+                        The goal of this software would be to transcribe analogic sounds corresponding to words into written form. 
+                        This project is the first step to create my own voice chatbot, codenamed Zilliax.
                     </p>
                 </div>
                 <div class="description-right">
