Ajout cv sur la page en anglais

--- a/public/en/profil.html
+++ b/public/en/profil.html
@@ -172,7 +172,7 @@
             </div>
             <div class="downloadable">
                 <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
-                <img src="img/cv-site.png" alt="Quick look-up on my cv" class="downloadable-picture">
+                <img src="../downloadable/cv-site.jpg" alt="Quick look-up on my cv" class="downloadable-picture">
                 <a href="downloadable/cv-site.pdf" class="download" download="cv-rdurand" target="_blank">Download my CV</a>
             </div>
         </main>
