Ajout morceau de titre téléchargement

--- a/public/en/profil.html
+++ b/public/en/profil.html
@@ -173,7 +173,7 @@
             <div class="downloadable">
                 <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
                 <img src="../downloadable/cv-site-en.jpg" alt="Quick look-up on my cv" class="downloadable-picture">
-                <a href="downloadable/cv-site-en.pdf" class="download" download="cv-rdurand-en" target="_blank">Download my CV</a>
+                <a href="../downloadable/cv-site-en.pdf" class="download" download="cv-rdurand-en" target="_blank">Download my CV</a>
             </div>
         </main>
         <footer class="footer">
