--- a/public/en/index.html
+++ b/public/en/index.html
@@ -30,7 +30,7 @@
                     <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="../img/hamburger.png">
+                    <img src="../img/hamburger.webp">
                 </button>
             </div>
             <div class="nav">
@@ -75,7 +75,7 @@
                     </p>
                 </div>
                 <div class="presentation-picture">
-                    <img src="../img/photo/left-color.png" alt="photo">
+                    <img src="../img/photo/left-color.webp" alt="photo">
                 </div>
             </div>
             <div class="projects-area">
@@ -140,7 +140,7 @@
             </div>
             <div class="help-area">
                 <a href="help.html" class="help">
-                    <img src="../img/bouee.png" alt="help">
+                    <img src="../img/bouee.webp" alt="help">
                 </a>
             </div>
         </footer>
