--- a/public/en/project/website.html
+++ b/public/en/project/website.html
@@ -30,7 +30,7 @@
                     <img class="logo-mobile" src="../../img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="../../img/hamburger.png">
+                    <img src="../../img/hamburger.webp">
                 </button>
             </div>
             <div class="nav">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="description-left">
                     <div class="description-picture-area">
-                        <img src="../../img/croquis.jpg" class="description-picture">
+                        <img src="../../img/croquis.webp" class="description-picture">
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
@@ -130,7 +130,7 @@
             </div>
             <div class="help-area">
                 <a href="../help.html" class="help">
-                    <img src="../../img/bouee.png" alt="help">
+                    <img src="../../img/bouee.webp" alt="help">
                 </a>
             </div>
         </footer>
