--- a/public/profil.html
+++ b/public/profil.html
@@ -30,7 +30,7 @@
                     <img class="logo-mobile" src="img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="img/hamburger.png">
+                    <img src="img/hamburger.webp">
                 </button>
             </div>
             <div class="nav">
@@ -67,7 +67,7 @@
         <main class="content">
             <div class="presentation">
                 <div class="presentation-picture">
-                    <img src="img/photo/right-color.png" alt="photo">
+                    <img src="img/photo/right-color.webp" alt="photo">
                 </div>
                 <div class="presentation-info">
                     <p>
@@ -184,7 +184,7 @@
             </div>
             <div class="help-area">
                 <a href="help.html" class="help">
-                    <img src="img/bouee.png" alt="help">
+                    <img src="img/bouee.webp" alt="help">
                 </a>
             </div>
         </footer>
