--- a/public/project/sound.html
+++ b/public/project/sound.html
@@ -30,7 +30,7 @@
                     <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="../img/hamburger.png">
+                    <img src="../img/hamburger.webp">
                 </button>
             </div>
             <div class="nav">
@@ -72,7 +72,7 @@
             <div class="description">
                 <div class="description-left">
                     <div class="description-picture-area">
-                        <img src="../img/sound-wave.jpg" class="description-picture">
+                        <img src="../img/sound-wave.webp" class="description-picture">
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
@@ -110,7 +110,7 @@
             </div>
             <div class="help-area">
                 <a href="../help.html" class="help">
-                    <img src="../img/bouee.png" alt="help">
+                    <img src="../img/bouee.webp" alt="help">
                 </a>
             </div>
         </footer>
