--- a/public/en/projets.html
+++ b/public/en/projets.html
@@ -26,12 +26,12 @@
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="index.html" class="logo">
-                    <img class="logo-large" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" width="225px" height="55px" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" width="55px" height="55px" src="../img/logo/logo-only.png" alt="logo">
                 </a>
-                <button class="nav-hamburger">
-                    <img src="../img/hamburger.webp">
-                </button>
+                <div class="nav-hamburger">
+                    <img width="48px" height="48px" src="../img/hamburger.webp" alt="Click to display the menu">
+                </div>
             </div>
             <div class="nav">
                 <div class="nav-list">
@@ -130,7 +130,7 @@
             </div>
             <div class="help-area">
                 <a href="help.html" class="help">
-                    <img src="../img/bouee.webp" alt="help">
+                    <img width="60px" height="60px" src="../img/bouee.webp" alt="help">
                 </a>
             </div>
         </footer>
