--- a/public/profil.html
+++ b/public/profil.html
@@ -26,12 +26,12 @@
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="index.html" class="logo">
-                    <img class="logo-large" src="img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" width="225px" height="55px" src="img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" width="55px" height="55px" src="img/logo/logo-only.png" alt="logo">
                 </a>
-                <button class="nav-hamburger">
-                    <img src="img/hamburger.webp">
-                </button>
+                <div class="nav-hamburger">
+                    <img width="48px" height="48px" src="img/hamburger.webp" alt="Cliquez pour afficher le menu">
+                </div>
             </div>
             <div class="nav">
                 <div class="nav-list">
@@ -67,7 +67,7 @@
         <main class="content">
             <div class="presentation">
                 <div class="presentation-picture">
-                    <img src="img/photo/right-color.webp" alt="photo">
+                    <img src="img/photo/right-color.webp" width="500px" height="660px" alt="photo">
                 </div>
                 <div class="presentation-info">
                     <p>
@@ -170,7 +170,7 @@
             </div>
             <div class="downloadable">
                 <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
-                <img src="downloadable/cv-site.jpg" alt="Aperçu de mon cv" class="downloadable-picture">
+                <img src="downloadable/cv-site.jpg" alt="Aperçu de mon cv" width="800px" height="1000px" class="downloadable-picture">
                 <a href="downloadable/cv-site.pdf" class="download" download="cv-rdurand" target="_blank">Télécharger mon CV</a>
             </div>
         </main>
@@ -184,7 +184,7 @@
             </div>
             <div class="help-area">
                 <a href="help.html" class="help">
-                    <img src="img/bouee.webp" alt="help">
+                    <img width="60px" height="60px" src="img/bouee.webp" alt="help">
                 </a>
             </div>
         </footer>
