--- a/public/en/profil.html
+++ b/public/en/profil.html
@@ -26,12 +26,12 @@
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="index.html" class="logo">
-                    <img class="logo-large" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" width="225px" height="55px" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" width="55px" height="55px" src="../img/logo/logo-only.png" alt="logo">
                 </a>
-                <button class="nav-hamburger">
-                    <img src="../img/hamburger.webp">
-                </button>
+                <div class="nav-hamburger">
+                    <img width="48px" height="48px" src="../img/hamburger.webp" alt="Click to display the menu">
+                </div>
             </div>
             <div class="nav">
                 <div class="nav-list">
@@ -67,7 +67,7 @@
         <main class="content">
             <div class="presentation">
                 <div class="presentation-picture">
-                    <img src="../img/photo/right-color.webp" alt="photo">
+                    <img src="../img/photo/right-color.webp" width="500px" height="660px" alt="photo">
                 </div>
                 <div class="presentation-info">
                     <p>
@@ -172,7 +172,7 @@
             </div>
             <div class="downloadable">
                 <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
-                <img src="../downloadable/cv-site-en.jpg" alt="Quick look-up on my cv" class="downloadable-picture">
+                <img src="../downloadable/cv-site-en.jpg" alt="preview of my cv" width="800px" height="1000px" class="downloadable-picture">
                 <a href="../downloadable/cv-site-en.pdf" class="download" download="cv-rdurand-en" target="_blank">Download my CV</a>
             </div>
         </main>
@@ -186,7 +186,7 @@
             </div>
             <div class="help-area">
                 <a href="help.html" class="help">
-                    <img src="../img/bouee.webp" alt="help">
+                    <img width="60px" height="60px" src="../img/bouee.webp" alt="help">
                 </a>
             </div>
         </footer>
