--- a/public/project/website.html
+++ b/public/project/website.html
@@ -26,12 +26,12 @@
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="../index.html" class="logo">
-                    <img class="logo-large" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" width="225px" height="55px" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" width="55px" height="55px" src="../img/logo/logo-only.png" alt="logo">
                 </a>
-                <button class="nav-hamburger">
-                    <img src="../img/hamburger.webp">
-                </button>
+                <div class="nav-hamburger">
+                    <img width="48px" height="48px" src="../img/hamburger.webp" alt="Cliquez pour afficher le menu">
+                </div>
             </div>
             <div class="nav">
                 <div class="nav-list">
@@ -72,7 +72,7 @@
             <div class="description">
                 <div class="description-left">
                     <div class="description-picture-area">
-                        <img src="../img/apercu-projets.png" class="description-picture">
+                        <img src="../img/apercu-projets.png" width="345px" height="215px" class="description-picture" alt="apercu-projets">
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
@@ -97,12 +97,12 @@
                     </p>
                     <div class="description-filler"></div>
                     <div class="description-picture-area">
-                        <img src="../img/mahara.png" class="description-picture">
+                        <img src="../img/mahara.png" width="345px" height="215px" class="description-picture" alt="screenshot mahara">
                     </div>
                 </div>
                 <div class="description-left">
                     <div class="description-picture-area">
-                        <img src="../img/croquis.webp" class="description-picture">
+                        <img src="../img/croquis.webp" width="345px" height="260px" class="description-picture" alt="photo croquis">
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
@@ -127,7 +127,7 @@
             </div>
             <div class="help-area">
                 <a href="../help.html" class="help">
-                    <img src="../img/bouee.webp" alt="help">
+                    <img width="60px" height="60px" src="../img/bouee.webp" alt="help">
                 </a>
             </div>
         </footer>
