Cache persistant et correction menu

--- a/public/en/informations.html
+++ b/public/en/informations.html
@@ -16,6 +16,7 @@
         <meta name="description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
+        <meta http-equiv="Cache-control" content="max-age=31536000">
         <title>About</title>
         <link rel="stylesheet" href="../css/style-informations.css">
         <link rel="stylesheet" href="../css/style-common.css">
