--- a/public/contact_error/error_incorrect_value.html
+++ b/public/contact_error/error_incorrect_value.html
@@ -16,6 +16,7 @@
         <meta name="description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
+        <meta http-equiv="Cache-control" content="max-age=31536000">
         <title>Erreur : saisie incorrecte</title>
         <link rel="stylesheet" href="style_contact_error.css">
         <link rel="stylesheet" href="../css/style-common.css">
