--- a/public/contact_error/error_not_send.html
+++ b/public/contact_error/error_not_send.html
@@ -18,6 +18,8 @@
         <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
         <meta http-equiv="Cache-control" content="max-age=31536000">
         <title>Erreur : non envoyé</title>
+        <link rel="preload" href="../js/cookie.js" as="script">
+        <link rel="preload" href="../js/nav.js" as="script">
         <link rel="stylesheet" href="style_contact_error.css">
         <link rel="stylesheet" href="../css/style-common.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
