--- a/public/project/alternance.html
+++ b/public/project/alternance.html
@@ -5,17 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Language" content="fr">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta property="og:title" content="Raphael DURAND's website">
+        <meta property="og:title" content="raphael-durand.fr">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.raphael-durand.fr/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
-        <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
-        informations about my professionnal profile.">
+        <meta name="og:description" content="raphael-durand.fr est mon portfolio numérique. J'y poste mes réalisations et toutes 
+        les informations concernant mon profil professionnel.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
-        <meta name="description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
-        informations about my professionnal profile.">
-        <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
+        <meta name="title" content="Alternance">
+        <meta name="description" content="raphael-durand.fr est mon portfolio numérique. J'y poste mes réalisations et toutes les informations
+        concernant mon profil professionnel.">
+        <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr
+        Raphaël Durand, informatique, alternance">
         <meta http-equiv="Cache-control" content="max-age=31536000">
         <title>Projet : Alternance</title>
         <link rel="preload" href="../js/cookie.js" as="script">
