--- a/public/en/profil.html
+++ b/public/en/profil.html
@@ -5,14 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Language" content="en">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta property="og:title" content="Raphael DURAND's website">
+        <meta property="og:title" content="raphael-durand.fr">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://www.raphael-durand.fr/">
+        <meta property="og:url" content="https://www.raphael-durand.fr/en/">
         <meta property="og:image" content="https://www.raphael-durand.fr/img/logo/facebook_cover_photo_2.png">
         <meta property="og:description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="theme-color" content="#080957">
         <meta name="author" content="Raphaël DURAND">
+        <meta name="title" content="My profile">
         <meta name="description" content="raphael-durand.fr is my portfolio website. I post my achievements and every necessary
         informations about my professionnal profile.">
         <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
