Ajout noindex dans fichier error

--- a/public/contact_error/error_not_send.html
+++ b/public/contact_error/error_not_send.html
@@ -19,6 +19,7 @@
         <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr
         Raphaël Durand, informatique, alternance">
         <meta http-equiv="Cache-control" content="max-age=31536000">
+        <meta name="robots" content="noindex">
         <title>Erreur : non envoyé</title>
         <link rel="preload" href="../js/cookie.js" as="script">
         <link rel="preload" href="../js/nav.js" as="script">
