--- a/public/en/contact_error/error_incorrect_value.html
+++ b/public/en/contact_error/error_incorrect_value.html
@@ -18,6 +18,7 @@
         informations about my professionnal profile.">
         <meta name="keywords" content="raphael, durand, raphael-durand, raphael durand, raphael durand linkedin, raphael durand fr">
         <meta http-equiv="Cache-control" content="max-age=31536000">
+        <meta name="robots" content="noindex">
         <title>Error : wrong input</title>
         <link rel="preload" href="../../js/cookie.js" as="script">
         <link rel="preload" href="../../js/nav.js" as="script">
